# aRT-old

./: CHANGES  DESCRIPTION  NAMESPACE  TODO  cleanup  configure  configure.in  configure.in.old  make-configure
R/: 00aRT.R  aRT.R  aRTclasses.R  aRTcomponent.R  aRTconn.R  aRTconn.R.in  aRTdb.R  aRTgeometry.R  aRTlayer.R  aRTquerier.R  aRTraster.R  aRTtable.R.in  aRTtheme.R  aRTvisual.R  geoR.R  gpmFunctions-bkp.R  gpmFunctions-bkp2.R  gpmFunctions.R  plot.R  sp.R  zzz.R  zzz.R.in
data/: catarina.RData  pol3.RData  recife.districts.RData  recife.points.RData  recife.sewers.RData
inst/: CITATION
inst/doc/: Makefile  Sweave.sty  aRT.sty  aRTconn.Rnw  aRTfillcell.R  aRTfillcell.Rnw  aRTgpm.Rnw  aRTintro.R  aRTintro.Rnw  aRTsp.Rnw  aRTtable.Rnw  pngfigs.sh
inst/papers/: Makefile  aRT.Rnw  bibliography.bib  (+1 more)
man/: 00aRT.Rd  aRTcomponent-class.Rd  aRTconn-00class.Rd  aRTconn-addPermission.Rd  aRTconn-createDb.Rd  aRTconn-deleteDb.Rd  aRTconn-dropUser.Rd  aRTconn-getPermissions.Rd  aRTconn-openDb.Rd  aRTconn-showDbs.Rd  aRTdb-00class.Rd  aRTdb-createLayer.Rd  aRTdb-createTable.Rd  aRTdb-createView.Rd  aRTdb-deleteLayer.Rd  aRTdb-deleteTable.Rd  aRTdb-deleteTheme.Rd  aRTdb-deleteView.Rd  aRTdb-importMif.Rd  aRTdb-importShape.Rd  aRTdb-importSpData.Rd  aRTdb-importTable.Rd  aRTdb-openLayer.Rd  aRTdb-openTable.Rd  aRTdb-openTheme.Rd  aRTdb-reload.Rd  aRTdb-showLayers.Rd  aRTdb-showTables.Rd  aRTdb-showThemes.Rd  aRTdb-showViews.Rd  aRTgeometry-00class.Rd  aRTgeometry-as.aRTgeometry.Rd  aRTgeometry-getClip.Rd  aRTgeometry-getGeometry.Rd  aRTgeometry-getID.Rd  aRTgeometry-simplify.Rd  aRTlayer-00class.Rd  aRTlayer-addLines.Rd  aRTlayer-addPoints.Rd  aRTlayer-addPolygons.Rd  (+47 more)
src/: Makefile.common  Makefile.in  Makefile.win  Makevars.in  SEXPbasic.cpp  SEXPbasic.h  SEXPutils.cpp  SEXPutils.h  TeAppTheme.cpp  TeApplicationUtils.cpp  TeDecoderSEXP.cpp  TeDecoderSEXP.h  TeRBasic.h  TeUtils.cpp  TeUtils.h  aRTcomponent.cpp  aRTcomponent.h  aRTconn.cpp  aRTconn.h  aRTdb.cpp  aRTdb.h  aRTdlcommon.cpp  aRTdlcommon.h  aRTdynattrtable.cpp  aRTdynattrtable.h  aRTeventtable.cpp  aRTeventtable.h  aRTexternaltable.cpp  aRTexternaltable.h  aRTgeometry.cpp  aRTgeometry.h  aRTlayer.cpp  aRTlayer.h  aRTmediatable.cpp  aRTmediatable.h  aRTquerier.cpp  aRTquerier.h  aRTraster.cpp  aRTraster.h  aRTstatictable.cpp  (+7 more)
tests/: auckland.R  bodmin.R  ca20.R  catarina.R  dynatt.R.error  event.R.error  geometry.R  parana.R  polygons.R  recife.R  sp.R
(+22 files in other folders)
